--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="C:\Users\no0BxB0y\Desktop\port\Trungngoc.jpeg" alt="alex-vidal">
+                    <img src="Trungngoc.jpeg" alt="alex-vidal">
                 </div>
 
             </div>
@@ -208,7 +208,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\56.png" class="img-res" alt="">
+                            <img src="56.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\123.png" class="img-res" alt="">
+                            <img src="123.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\21.png" class="img-res" alt="">
+                            <img src="21.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\44.png" class="img-res" alt="">
+                            <img src="44.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -248,7 +248,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\doandau2.png" class="img-res" alt="">
+                            <img src="\doandau2.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\g.png" class="img-res" alt="">
+                            <img src="g.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\PSD 1.jpg" class="img-res" alt="">
+                            <img src="PSD 1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem7"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\PSD 2.jpg" class="img-res" alt="">
+                            <img src="PSD 2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem8"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\PSD 3.jpg" class="img-res" alt="">
+                            <img src="PSD 3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem9"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -298,7 +298,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\a1.PNG" class="img-res" alt="">
+                            <img src="a1.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem10"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\a2.PNG" class="img-res" alt="">
+                            <img src="a2.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem11"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -318,7 +318,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="C:\Users\no0BxB0y\Desktop\port\a3.PNG" class="img-res" alt="">
+                            <img src="a3.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem12"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -398,7 +398,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\56.png" alt="">
+            <img class="img-res" src="56.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -416,7 +416,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\123.png" alt="">
+            <img class="img-res" src="123.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -434,7 +434,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\21.png" alt="">
+            <img class="img-res" src="21.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -452,7 +452,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\44.png" alt="">
+            <img class="img-res" src="44.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -470,7 +470,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\doandau2.png" alt="">
+            <img class="img-res" src="doandau2.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -488,7 +488,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\g.png" alt="">
+            <img class="img-res" src="g.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -506,7 +506,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\PSD 1.jpg" alt="">
+            <img class="img-res" src="PSD 1.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -524,7 +524,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\PSD 2.jpg" alt="">
+            <img class="img-res" src="PSD 2.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -542,7 +542,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\PSD 3.jpg" alt="">
+            <img class="img-res" src="PSD 3.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -560,7 +560,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\a1.PNG" alt="">
+            <img class="img-res" src="a1.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
@@ -578,7 +578,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\a2.PNG" alt="">
+            <img class="img-res" src="a2.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
@@ -596,7 +596,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="C:\Users\no0BxB0y\Desktop\port\a3.PNG" alt="">
+            <img class="img-res" src="a3.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
