--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
 
     <!-- Stylesheets
     ================================================== -->
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img src="image/logo.png" alt="logo"></a>
 
                 </div><!-- /.navbar-header -->
 
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="Trungngoc.jpeg" alt="alex-vidal">
+                    <img src="image/Trungngoc.jpeg" alt="alex-vidal">
                 </div>
 
             </div>
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="text-center">
                     <h3>My Skills</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="image/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -172,25 +172,25 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>What i do</h3>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="image/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
+                            <img src="image/front-end.svg" alt="Front End Developer">
                             <h4>Front-end</h4>
                             <p>As a Web Design developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
+                            <img src="image/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
                             <p>I can draw and 2D animation.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
+                            <img src="image/consultancy.svg" alt="Coding">
                             <h4>Consultancy</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
                         </div><!-- /.service -->
@@ -203,12 +203,12 @@
             <div class="container">
                 <div class="text-center">
                     <h3>My recent Works</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    <img src="image/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="56.png" class="img-res" alt="">
+                            <img src="image/56.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="123.png" class="img-res" alt="">
+                            <img src="image/123.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="21.png" class="img-res" alt="">
+                            <img src="image/21.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="44.png" class="img-res" alt="">
+                            <img src="image/44.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -248,7 +248,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="\doandau2.png" class="img-res" alt="">
+                            <img src="image/doandau2.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="g.png" class="img-res" alt="">
+                            <img src="image/g.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>2D Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="PSD 1.jpg" class="img-res" alt="">
+                            <img src="image/PSD 1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem7"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="PSD 2.jpg" class="img-res" alt="">
+                            <img src="image/PSD 2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem8"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -288,7 +288,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="PSD 3.jpg" class="img-res" alt="">
+                            <img src="image/PSD 3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>App mobile Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem9"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -298,7 +298,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="a1.PNG" class="img-res" alt="">
+                            <img src="image/a1.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem10"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="a2.PNG" class="img-res" alt="">
+                            <img src="image/a2.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem11"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -318,7 +318,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="a3.PNG" class="img-res" alt="">
+                            <img src="image/a3.PNG" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Web design Project</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem12"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -398,7 +398,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="56.png" alt="">
+            <img class="img-res" src="image/56.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -416,7 +416,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="123.png" alt="">
+            <img class="img-res" src="image/123.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -434,7 +434,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="21.png" alt="">
+            <img class="img-res" src="image/21.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -452,7 +452,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="44.png" alt="">
+            <img class="img-res" src="image/44.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -470,7 +470,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="doandau2.png" alt="">
+            <img class="img-res" src="image/doandau2.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -488,7 +488,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="g.png" alt="">
+            <img class="img-res" src="image/g.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">2D Project</h4>
@@ -506,7 +506,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="PSD 1.jpg" alt="">
+            <img class="img-res" src="image/PSD 1.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -524,7 +524,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="PSD 2.jpg" alt="">
+            <img class="img-res" src="image/PSD 2.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -542,7 +542,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="PSD 3.jpg" alt="">
+            <img class="img-res" src="image/PSD 3.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">App mobile Project</h4>
@@ -560,7 +560,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="a1.PNG" alt="">
+            <img class="img-res" src="image/a1.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
@@ -578,7 +578,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="a2.PNG" alt="">
+            <img class="img-res" src="image/a2.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
@@ -596,7 +596,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="a3.PNG" alt="">
+            <img class="img-res" src="image/a3.PNG" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Web design Project</h4>
